--- a/V2rayNG/app/src/main/res/menu/menu_drawer.xml
+++ b/V2rayNG/app/src/main/res/menu/menu_drawer.xml
@@ -4,6 +4,7 @@
     tools:showIn="navigation_view">
 
     <group android:id="@+id/group_main">
+
         <item
             android:id="@+id/sub_setting"
             android:icon="@drawable/ic_subscriptions_24dp"
@@ -43,6 +44,11 @@
             android:id="@+id/about"
             android:icon="@drawable/ic_about_24dp"
             android:title="@string/title_about" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_exit_to_app_24dp"
+            android:title="log out" />
+
         <!-- place holder for version text at the bottom -->
         <item
             android:id="@+id/placeholder"
